added flask app

--- a/RabbitMq_Project/requests.ipynb
+++ b/RabbitMq_Project/requests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -16,19 +16,18 @@
    "source": [
     "import requests\n",
     "\n",
-    "\n",
     "url = 'http://localhost:8000/create-order/'\n",
     "\n",
     "data = {\n",
     "    'customer_name': 'John Doe',\n",
-    "    'total_amount': 100.00\n",
+    "    'total_amount': 100.00,\n",
+    "    'customer_email':'abhipy30@gmail.com'\n",
     "}\n",
     "response = requests.post(url, data=data)\n",
-    "\n",
     "if response.status_code == 200:\n",
     "    print(\"Order created successfully!\")\n",
     "else:\n",
-    "    print(\"Failed to create order:\", response.text)\n"
+    "    print(\"Failed to create order:\", response.json())\n"
    ]
   }
  ],
